--- a/assets/css/sass/chat.sass
+++ b/assets/css/sass/chat.sass
@@ -19,7 +19,8 @@ $own-color		: #cccccc
 		width: calc( 100% - 20px ) !important
 
 body
-	overflow: hidden
+	&.netflix, &.clarovideo, &.blim
+		overflow: hidden
 
 /**
  * Chat
@@ -132,32 +133,34 @@ body
 /**
  * Scrollbar
  */
-::-webkit-scrollbar
-	height: 15px
 
-::-webkit-scrollbar-thumb:vertical,
-::-webkit-scrollbar-thumb:horizontal
-	background-color: $system-color
-	border-radius: 15px
-	border: 3px solid black
-	cursor: pointer
+.messages-container
+	&::-webkit-scrollbar
+		height: 15px
 
-::-webkit-scrollbar-thumb:vertical:hover,
-::-webkit-scrollbar-thumb:horizontal:hover 
-	background-color: rgba(0, 0, 0, .8)
+	&::-webkit-scrollbar-thumb:vertical,
+	&::-webkit-scrollbar-thumb:horizontal
+		background-color: $system-color
+		border-radius: 15px
+		border: 3px solid black
+		cursor: pointer
 
-::-webkit-scrollbar-track 
-	padding: 12px
-	background: black
+	&::-webkit-scrollbar-thumb:vertical:hover,
+	&::-webkit-scrollbar-thumb:horizontal:hover 
+		background-color: rgba(0, 0, 0, .8)
 
-::-webkit-scrollbar-track:hover 
-	background-color: #F5F5F5
+	&::-webkit-scrollbar-track 
+		padding: 12px
+		background: black
 
-::-webkit-scrollbar-corner 
-	background: transparent
+	&::-webkit-scrollbar-track:hover 
+		background-color: #F5F5F5
 
-::-webkit-scrollbar-corner 
-	background-clip: padding-box
-	background-color: black
-	border: solid white
-	border-width: 3px 0 0 3px
+	&::-webkit-scrollbar-corner 
+		background: transparent
+
+	&::-webkit-scrollbar-corner 
+		background-clip: padding-box
+		background-color: black
+		border: solid white
+		border-width: 3px 0 0 3px
